--- a/CrudForms/CrudForms.csproj
+++ b/CrudForms/CrudForms.csproj
@@ -59,20 +59,41 @@
   <ItemGroup>
     <Compile Include="Model\Filtro.cs" />
     <Compile Include="Model\MD_Campos.cs" />
+    <Compile Include="Model\MD_Consultas.cs" />
     <Compile Include="Model\MD_Parametros.cs" />
     <Compile Include="Model\MD_Relacao.cs" />
     <Compile Include="Model\MD_Tabela.cs" />
     <Compile Include="Model\MD_TipoCampo.cs" />
+    <Compile Include="Model\OrderBy.cs" />
     <Compile Include="Model\Parametros.cs" />
     <Compile Include="Model\Valores.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Regras\GerarCsv.cs" />
     <Compile Include="Regras\Importador.cs" />
     <Compile Include="Visao\FO_Aguarde.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Visao\FO_Aguarde.Designer.cs">
       <DependentUpon>FO_Aguarde.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Visao\FO_BuscaGenerica.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\FO_BuscaGenerica.Designer.cs">
+      <DependentUpon>FO_BuscaGenerica.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Visao\FO_CadastraConsulta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\FO_CadastraConsulta.Designer.cs">
+      <DependentUpon>FO_CadastraConsulta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Visao\FO_ConsultasSalvas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\FO_ConsultasSalvas.Designer.cs">
+      <DependentUpon>FO_ConsultasSalvas.cs</DependentUpon>
     </Compile>
     <Compile Include="Visao\FO_FiltrarGenerico.cs">
       <SubType>Form</SubType>
@@ -91,6 +112,12 @@
     </Compile>
     <Compile Include="Visao\FO_Login.Designer.cs">
       <DependentUpon>FO_Login.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Visao\FO_OrderBy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Visao\FO_OrderBy.Designer.cs">
+      <DependentUpon>FO_OrderBy.cs</DependentUpon>
     </Compile>
     <Compile Include="Visao\FO_Principal.cs">
       <SubType>Form</SubType>
@@ -132,6 +159,15 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Visao\FO_BuscaGenerica.resx">
+      <DependentUpon>FO_BuscaGenerica.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Visao\FO_CadastraConsulta.resx">
+      <DependentUpon>FO_CadastraConsulta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Visao\FO_ConsultasSalvas.resx">
+      <DependentUpon>FO_ConsultasSalvas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Visao\FO_FiltrarGenerico.resx">
       <DependentUpon>FO_FiltrarGenerico.cs</DependentUpon>
     </EmbeddedResource>
@@ -140,6 +176,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Visao\FO_Login.resx">
       <DependentUpon>FO_Login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Visao\FO_OrderBy.resx">
+      <DependentUpon>FO_OrderBy.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Visao\FO_Principal.resx">
       <DependentUpon>FO_Principal.cs</DependentUpon>
