Adicionando geração de DER.

--- a/CrudForms/CrudForms.csproj
+++ b/CrudForms/CrudForms.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regras\GerarCsv.cs" />
+    <Compile Include="Regras\GerarDer.cs" />
     <Compile Include="Regras\Importador.cs" />
     <Compile Include="Visao\FO_Aguarde.cs">
       <SubType>Form</SubType>
