Criando nova versão com mudanças: Alterando endpoint onde é validado o Login Adicionando opção para gerar relátório JSON Retirando mensagem de gerado Der com Sucesso Possibilitar selecionar diretório onde será salvo o arquivo exportado Criação da opção para atualizar as tabelas de acordo com o BancoDados

--- a/CrudForms/CrudForms.csproj
+++ b/CrudForms/CrudForms.csproj
@@ -87,7 +87,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Regras\AcessoBancoCliente\AcessoBanco.cs" />
-    <Compile Include="Regras\GerarCsv.cs" />
+    <Compile Include="Regras\GerarArquivoExportacao.cs" />
     <Compile Include="Regras\GerarDer.cs" />
     <Compile Include="Regras\IdentJsonString.cs" />
     <Compile Include="Regras\Importador.cs" />
