Confirmando os projetos

--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -145,6 +145,7 @@
     <Compile Include="DAO\MDN_Table.cs" />
     <Compile Include="DAO\MD_Campos.cs" />
     <Compile Include="DAO\MD_Consultas.cs" />
+    <Compile Include="DAO\MD_Observer.cs" />
     <Compile Include="DAO\MD_Parametros.cs" />
     <Compile Include="DAO\MD_Relacao.cs" />
     <Compile Include="DAO\MD_Tabela.cs" />
@@ -173,7 +174,9 @@
     <Compile Include="Util\Enumerator.cs" />
     <Compile Include="Util\Funcoes.cs" />
     <Compile Include="Util\Global.cs" />
-    <Compile Include="Visao\BarraDeCarregamento.cs" />
+    <Compile Include="Visao\BarraDeCarregamento.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Visao\BarraDeCarregamento.Designer.cs">
       <DependentUpon>BarraDeCarregamento.cs</DependentUpon>
     </Compile>
