--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -146,6 +146,7 @@
     <Compile Include="DAO\MD_Campos.cs" />
     <Compile Include="DAO\MD_Consultas.cs" />
     <Compile Include="DAO\MD_Observer.cs" />
+    <Compile Include="DAO\MD_Observersenviados.cs" />
     <Compile Include="DAO\MD_Parametros.cs" />
     <Compile Include="DAO\MD_Relacao.cs" />
     <Compile Include="DAO\MD_Tabela.cs" />
