--- a/Utils/Utils.csproj
+++ b/Utils/Utils.csproj
@@ -76,6 +76,9 @@
     <Reference Include="Npgsql, Version=6.0.7.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7, processorArchitecture=MSIL">
       <HintPath>..\packages\Npgsql.6.0.7\lib\netstandard2.0\Npgsql.dll</HintPath>
     </Reference>
+    <Reference Include="Oracle.ManagedDataAccess, Version=4.122.21.1, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
+      <HintPath>..\packages\Oracle.ManagedDataAccess.21.9.0\lib\net462\Oracle.ManagedDataAccess.dll</HintPath>
+    </Reference>
     <Reference Include="SQLite.Designer">
       <HintPath>..\..\..\..\..\..\..\Program Files\System.Data.SQLite\2015\bin\SQLite.Designer.dll</HintPath>
     </Reference>
@@ -89,6 +92,11 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Common, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.Data.Common.4.3.0\lib\net451\System.Data.Common.dll</HintPath>
+      <Private>True</Private>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Data.SQLite, Version=1.0.112.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=AMD64">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>D:\Devtools\System.Data.SQLite.dll</HintPath>
@@ -160,6 +168,7 @@
     <Compile Include="DAO\Relacionamento.cs" />
     <Compile Include="DAO\Tabela.cs" />
     <Compile Include="DataBase\Banco.cs" />
+    <Compile Include="DataBase\BancoOracle.cs" />
     <Compile Include="DataBase\BancoPostGreSql.cs" />
     <Compile Include="DataBase\BancoSQLite.cs" />
     <Compile Include="DataBase\BancoMysql.cs" />
@@ -167,6 +176,7 @@
     <Compile Include="DataBase\Connection.cs" />
     <Compile Include="Importador\Document.cs" />
     <Compile Include="Importador\DocumentMySql.cs" />
+    <Compile Include="Importador\DocumentOracle.cs" />
     <Compile Include="JSON\JS_RetornoEnvioEmail.cs" />
     <Compile Include="JSON\JS_RetornoLogin.cs" />
     <Compile Include="JSON\JS_RetornoVersao.cs" />
@@ -200,6 +210,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="Oracle.DataAccess.Common.Configuration.Section.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Oracle.ManagedDataAccess.Client.Configuration.Section.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
