--- a/Utils/packages.config
+++ b/Utils/packages.config
@@ -9,9 +9,11 @@
   <package id="MySql.Data" version="8.0.31" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net46" />
   <package id="Npgsql" version="6.0.7" targetFramework="net48" />
+  <package id="Oracle.ManagedDataAccess" version="21.9.0" targetFramework="net48" />
   <package id="Portable.BouncyCastle" version="1.9.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net48" />
+  <package id="System.Data.Common" version="4.3.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.4" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
