--- a/.gitignore
+++ b/.gitignore
@@ -225,3 +225,4 @@ project.lock.json
 #####
 # End of core ignore list, below put you custom 'per project' settings (patterns or path)
 #####
+/Instalador/Output
